--- a/apps/kamsguard-web/src/app/features/connected-devices/connected-devices.component.scss
+++ b/apps/kamsguard-web/src/app/features/connected-devices/connected-devices.component.scss
@@ -1,62 +1,57 @@
-.connected-devices {
-  padding: 20px;
-  .overview-card {
-    margin-bottom: 20px;
-    .mat-card-header {
-      background-color: #f5f5f5;
-    }
-    .mat-card-title {
-      font-size: 1.2rem;
-    }
+/* company-overview.component.scss */
+
+mat-card {
+  margin-bottom: 10px;
+
+  .mat-card-header {
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #ddd;
   }
 
-  .overview-info {
-    p {
-      margin: 10px 0;
-      font-size: 0.9rem;
-    }
+  .mat-card-title {
+    font-size:0.8rem;
+    color: #3f51b5;
+    font-weight: 600;
   }
 
-  .filters {
-    margin-bottom: 20px;
-    display: flex;
-    gap: 15px;
+  mat-card-content {
+    padding: 20px;
 
-    mat-form-field {
-      flex: 1;
-    }
-  }
-
-  .status-card, .alerts-card {
-    margin-bottom: 20px;
-    .mat-card-header {
-      background-color: #f5f5f5;
-    }
-    .mat-card-title {
-      font-size: 1.2rem;
-    }
-  }
-
-  table {
-    width: 100%;
-    font-size: 0.9rem;
-    border-collapse: collapse;
-
-    th, td {
-      padding: 8px;
-      text-align: left;
+    h3 {
+      margin: 8px 0;
+      font-size: 0.8rem;
+      color: #424242;
     }
 
-    th {
-      background-color: #f5f5f5;
-    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+      overflow: hidden;
 
-    mat-icon {
-      &.active {
-        color: green;
+      th, td {
+        padding: 8px 11px;
+        text-align: left;
+        border-bottom: 1px solid #e0e0e0;
       }
-      &.inactive {
-        color: red;
+
+      th {
+        background-color: #3f51b5;
+        color: white;
+        text-transform: uppercase;
+        font-weight: 500;
+      }
+
+      td {
+        background-color: white;
+        color: #333;
+        font-size: 0.9rem;
+      }
+
+      tr:hover {
+        background-color: #f1f1f1;
       }
     }
   }
