--- a/apps/kamsguard-web/src/app/features/real-time/real-time.component.html
+++ b/apps/kamsguard-web/src/app/features/real-time/real-time.component.html
@@ -19,44 +19,15 @@
       <th mat-header-cell *matHeaderCellDef> Index </th>
       <td mat-cell *matCellDef="let event"> {{event.index}} </td>
     </ng-container>
-
-    <!-- On Disk Column -->
-    <ng-container matColumnDef="ondisk">
-      <th mat-header-cell *matHeaderCellDef> On Disk </th>
-      <td mat-cell *matCellDef="let event"> {{event.ondisk ? 'Yes' : 'No'}} </td>
-    </ng-container>
-
-    <!-- Duration Column -->
-    <ng-container matColumnDef="duration">
-      <th mat-header-cell *matHeaderCellDef> Duration </th>
-      <td mat-cell *matCellDef="let event"> {{event.duration}} </td>
-    </ng-container>
-
-    <!-- Pre Alarm Column -->
-    <ng-container matColumnDef="pre_alarm">
-      <th mat-header-cell *matHeaderCellDef> Pre Alarm </th>
-      <td mat-cell *matCellDef="let event"> {{event.pre_alarm}} </td>
-    </ng-container>
-
-    <!-- Archive Column -->
-    <ng-container matColumnDef="archive">
-      <th mat-header-cell *matHeaderCellDef> Archive </th>
-      <td mat-cell *matCellDef="let event"> {{event.archive}} </td>
-    </ng-container>
-
+    
     <!-- Entry Status Column -->
     <ng-container matColumnDef="entry_status">
       <th mat-header-cell *matHeaderCellDef> Entry Status </th>
       <td mat-cell *matCellDef="let event"> {{event.entry_status}} </td>
     </ng-container>
 
-    <!-- Alarm Type Column -->
-    <ng-container matColumnDef="alm_type">
-      <th mat-header-cell *matHeaderCellDef> Alarm Type </th>
-      <td mat-cell *matCellDef="let event"> {{event.alm_type}} </td>
-    </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="['cam', 'alm', 'index', 'ondisk', 'duration', 'pre_alarm', 'archive', 'entry_status', 'alm_type']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['cam', 'alm', 'index', 'ondisk', 'duration', 'pre_alarm', 'archive', 'entry_status', 'alm_type'];"></tr>
+    <tr mat-header-row *matHeaderRowDef="['cam', 'alm', 'index', 'entry_status']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['cam', 'alm', 'index', 'entry_status'];"></tr>
   </table>
 </div>
