--- a/apps/kamsguard-web/src/app/core/home/home.component.html
+++ b/apps/kamsguard-web/src/app/core/home/home.component.html
@@ -1,71 +1,21 @@
 <div class="home-container">
-  <!-- <section class="hero">
-    <div class="hero-text">
-      <h1>
-        Protecting Property with Advanced <br />
-        Fire Detection
-      </h1>
-      <p>Discover how our technology keeps you safe.</p>
-      <button mat-raised-button color="primary" (click)="scrollToIndustrialSolutions()">Learn More</button>
-    </div>
-    <img
-      src="/Kamsware-Fire-Prevention-Systems.jpg"
-      alt="Hero Image"
-      class="hero-image"
-    />
-  </section> -->
-
 
   <section class="hero">
     <div class="hero-overlay">
-      <!-- Shapes and Design Elements -->
       <div class="iot-design">
-        <!-- Example nodes and lines -->
         <div class="node"></div>
         <div class="line"></div>
-        <!-- Add more nodes and connections -->
       </div>
       <div class="hero-text">
         <h1>
-          Protecting Property with Advanced <br />
-          Fire Detection
+          Protecting Property<br />
+          with Advanced Fire Detection
         </h1>
         <p>Discover how our technology keeps you safe.</p>
         <button mat-raised-button color="primary" (click)="scrollToIndustrialSolutions()">Learn More</button>
       </div>
     </div>
   </section>
-  
-
-
-  
-  
-  <!-- <section class="features">
-    <mat-card class="feature-card">
-      <mat-icon>notifications</mat-icon>
-      <mat-card-title>Real-time Alerts</mat-card-title>
-      <mat-card-content>
-        Get immediate notifications for any fire-related incidents.
-      </mat-card-content>
-    </mat-card>
-
-    <mat-card class="feature-card">
-      <mat-icon class="icon">sensors</mat-icon>
-      <mat-card-title>Detector Status</mat-card-title>
-      <mat-card-content>
-        Monitor the status of all connected fire detectors.
-      </mat-card-content>
-    </mat-card>
-
-    <mat-card class="feature-card">
-      <mat-icon>alarm</mat-icon>
-      <mat-card-title>Recent Activity</mat-card-title>
-      <mat-card-content>
-        Review the recent activity of your fire detection system.
-      </mat-card-content>
-    </mat-card>
-  </section> -->
-
 
   <section class="features">
     <div class="features-header">
@@ -165,8 +115,4 @@
     </div>
   </section>
 
-
-  <!-- <div class="app-footer">
-    <app-footer></app-footer>
-  </div> -->
 </div>
