--- a/apps/kamsguard-web/src/app/features/device-management/device-management.component.scss
+++ b/apps/kamsguard-web/src/app/features/device-management/device-management.component.scss
@@ -60,7 +60,7 @@
       }
     }
     .view-details-button {
-      color: #2196f3; // Blue color for text
+      color: #0e2b5c; 
       background-color: transparent;
       border: none;
       cursor: pointer;
