--- a/apps/kamsguard-web/src/app/features/events/events.component.scss
+++ b/apps/kamsguard-web/src/app/features/events/events.component.scss
@@ -1,69 +1,187 @@
-.event-accordion {
-  margin: 20px 0;
+.event-container {
   padding: 20px;
-}
-
-.mat-expansion-panel {
-  border-radius: 8px;
-  border: 1px solid #e0e0e0;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-  margin-bottom: 10px;
-  transition: all 0.3s ease-in-out;
-}
-
-.mat-expansion-panel.critical {
-  border-color: #ff5252;
-  background-color: #fff5f5;
-}
-
-.mat-expansion-panel-header {
-  padding: 10px 15px;
-  background-color: #f7f7f7;
-  border-bottom: 1px solid #ddd;
-  border-radius: 8px 8px 0 0;
-  color: #333;
-  font-weight: 600;
-}
-
-.event-title {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.filter-section {
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  
+  .filter-title {
+    font-size: 16px;
+    font-weight: 300;
+    margin-bottom: 10px;
+  }
+  
+  .filter-controls {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+
+    .search-input {
+      flex: 1;
+      padding: 12px;
+      border-radius: 4px;
+      border: 1px solid #ddd;
+      font-size: 14px;
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+      transition: border-color 0.3s ease;
+      
+      &:focus {
+        border-color: #0e2b5c;
+        outline: none;
+        box-shadow: 0 0 0 3px rgba(38, 143, 255, 0.2);
+      }
+    }
+    
+    button {
+      min-width: 120px;
+    }
+  }
+  
+  .filter-tags {
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+
+    .filter-tag {
+      display: flex;
+      align-items: center;
+      background-color: #e0f7fa;
+      border-radius: 4px;
+      padding: 8px;
+      font-size: 14px;
+      color: #00796b;
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+      
+      button {
+        margin-left: 8px;
+        color: #00796b;
+        &:hover {
+          color: #004d40;
+        }
+      }
+    }
+  }
+}
+
+
+.notification-list {
+  .notification-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    position: relative; 
+    transition: background-color 0.3s ease;
+
+    &.critical {
+      border-color: #ff5252;
+      background-color: #fff5f5;
+    }
+
+    &.thermal1 {
+      border-color: #ff9800;
+      background-color: #fff3e0;
+    }
+
+    &.thermal2 {
+      border-color: #ffc107;
+      background-color: #fffde7;
+    }
+
+    .notification-summary {
+      flex: 1;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .event-title {
+        font-weight: medium;
+        color: #333;
+      }
+
+      .event-time {
+        color: #555;
+        font-size: 14px;
+      }
+    }
+
+    .delete-button {
+      display: none; /* Hide the delete button by default */
+      position: absolute;
+      right: 12px; /* Adjust as needed to position the button */
+      top: 50%;
+      transform: translateY(-50%);
+      background: none;
+      border: none;
+      color: #666;
+      cursor: pointer;
+      transition: color 0.3s ease;
+
+      &:hover {
+        color: #333;
+      }
+    }
+
+    &:hover .delete-button {
+      display: block; 
+    }
+  }
 }
 
 .event-details {
-  padding: 15px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
   background-color: #fff;
-  border-radius: 0 0 8px 8px;
-}
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 10px;
-}
+  button.back-button {
+    margin-bottom: 20px;
+    background: none;
+    border: none;
+    color: #0e2b5c;
+    font-size: 16px;
+    cursor: pointer;
 
-td {
-  padding: 10px;
-  border: none;
-  font-size: 13px;
-  color: #555;
-}
+    mat-icon {
+      vertical-align: middle;
+    }
 
-tr:nth-child(even) {
-  background-color: #f9f9f9;
-}
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 
-strong {
-  color: #2c3e50;
-}
+  table {
+    width: 100%;
+    border-collapse: collapse;
 
-.event-details-json pre {
-  margin: 10px 0;
-  background-color: #f5f5f5;
-  padding: 15px;
-  border-radius: 5px;
-  font-size: 13px;
-  color: #444;
+    td {
+      padding: 12px;
+      border: none;
+      font-size: 14px;
+      color: #555;
+    }
+
+    tr:nth-child(even) {
+      background-color: #f9f9f9;
+    }
+
+    strong {
+      color: #2c3e50;
+    }
+  }
 }
 
 .no-events {
