--- a/apps/kamsguard-web/src/app/core/layout/header/header.component.html
+++ b/apps/kamsguard-web/src/app/core/layout/header/header.component.html
@@ -6,7 +6,7 @@
   >
     <mat-icon>menu</mat-icon>
   </button>
-  <span class="brand-logo" routerLink="/">Kamsguard Slns</span>
+  <span class="brand-logo" routerLink="/">Kamsguard Solutions</span>
   <span class="example-spacer"></span>
 
   <div class="nav-links-container">
